--- a/src/nlp/Cargo.toml
+++ b/src/nlp/Cargo.toml
@@ -13,3 +13,4 @@ ic-cdk-macros = "0.16.0"
 candid = "0.10.10"
 serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.17.1"
+ic-stable-structures = "0.6.5"
