--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tunnel:start": "npx --yes tsx ./src/tunnel/src/index.ts"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "tailwindcss": "^3.3.2",
     "turbo": "^2.1.3"
   }
