--- a/src/react-native-app/package.json
+++ b/src/react-native-app/package.json
@@ -14,23 +14,23 @@
     "@bundly/ares-react-native": "^0.2.0-beta.2",
     "@dfinity/agent": "^1.3.0",
     "@expo/vector-icons": "^14.0.4",
+    "@types/react": "~18.2.79",
     "big-integer": "^1.6.52",
     "expo": "~51.0.28",
     "expo-device": "^6.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
     "nativewind": "^2.0.11",
+    "postcss-cli": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-web": "~0.19.10",
-    "expo-linear-gradient": "~13.0.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "typescript": "~5.3.3"
+  
   },
   "private": true
 }
